--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,12 @@ head{
 }
 body{
     font-family: "Roboto", sans-serif;
+    background-color: #FFFFFF;
+    color: #434455;
 }
 footer{
     font-family: "Roboto", sans-serif;
+    background-color: #2e2f42;
 }
 .header-logo{
     font-family:"Raleway", sans-serif;
@@ -17,10 +20,10 @@ footer{
     line-height: 117%;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #001f3f;
+    color: #4d5ae5;
 }
 .accent{
-    color: #5a4fcf;
+    color: #f4f4fd;
 
 }
 .header-menu-list{
@@ -95,21 +98,22 @@ footer{
     line-height: 111%;
     letter-spacing: 0.02em;
     text-align: center;
-    color: #001f3f;
+    color: #2e2f42;
+    text-transform: capitalize;
 }
-.portfolio-item-subtile{
+.portfolio-item-subtitle{
     font-weight: 500;
     font-size: 20px;
-    line-height: 120%;
+    line-height: 1.2;
     letter-spacing: 0.02em;
-    color: #001f3f;
+    color: #2e2f42;
 }
 .portfolio-item-text{
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
-    color: #708090;
+    color: #434455;
 }
 .footer-logo{
     font-family: "Raleway", sans-serif;
@@ -118,11 +122,11 @@ footer{
     line-height: 117%;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #cfd8dc;
+    color: #4d5ae5;
 }
 .footer-text{
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5%;
     letter-spacing: 0.02em;
-    color: #cfd8dc;
+    color: #F4F4FD;
 }
