--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,11 @@ footer{
     text-transform: uppercase;
     color: #4d5ae5;
 }
-.accent{
+.accent-header{
+    color: #2e2f42;
+
+}
+.accent-footer{
     color: #f4f4fd;
 
 }
@@ -39,22 +43,40 @@ footer{
     letter-spacing: 0.02em;
     color: #708090;
 }
+.main-header{
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
 .background-header{
-    background:  #001f3f;
+    background:  #2e2f42;
     width: 1440px;
     height: 600px;
 }
 .button{
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.04em;
     color: #ffffff;
+    background-color: #4D5AE5;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    background: #5a4fcf;
+    cursor: pointer;
+}
+.button:hover{
+    background-color: #404BBF
+}
+.button:focus{
+    background-color: #404BBF
 }
 .features-header{
     
+}
+.features-header{
+    visibility: hidden;
 }
 .features-item-subtitle{
     font-weight: 500;
