--- a/css/style.css
+++ b/css/style.css
@@ -83,13 +83,16 @@ footer{
     font-size: 20px;
     line-height: 120%;
     letter-spacing: 0.02em;
-    color: #001f3f;
+    color: #2e2f42;
 }
 .features-item-text{
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #708090;
+}
+.team{
+    background-color: #F4F4FD;
 }
 .team-header{
     font-weight: 700;
@@ -97,7 +100,11 @@ footer{
     line-height: 111%;
     letter-spacing: 0.02em;
     text-align: center;
-    color: #001f3f;
+    color: #2e2f42;
+    text-transform: capitalize;
+}
+.team-menu-list{
+    background-color: #FFFFFF;
 }
 .team-item-subtitle{
     font-weight: 500;
@@ -105,14 +112,14 @@ footer{
     line-height: 120%;
     letter-spacing: 0.02em;
     text-align: center;
-    color: #001f3f;
+    color: #2e2f42;
 }
 .team-item-text{
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
     text-align: center;
-    color: #708090;
+    color: #434455;
 }
 .portfolio-header{
     font-weight: 700;
@@ -129,6 +136,9 @@ footer{
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+}
+.portfolio-item-img{
+    width: 360;
 }
 .portfolio-item-text{
     font-weight: 400;
