--- a/css/style.css
+++ b/css/style.css
@@ -30,18 +30,30 @@ footer{
     color: #f4f4fd;
 
 }
-.header-menu-list{
+.header-menu-link{
     font-weight: 500;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
-    color: #001f3f;
+    color: #2e2f42;
 }
-.addres-menu-list{
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: 0.02em;
-    color: #708090;
+.header-menu-link:hover{
+    color: #404bbf;
+}
+.header-menu-link:focus{
+    color: #404bbf
+}
+.header-adderes{
+    font-style: normal;
+}
+.addres-menu-link{
+    color:#434455;
+}
+.addres-menu-link:hover{
+    color: #404bbf
+}
+.addres-menu-link:focus{
+    color: #404bbf
 }
 .main-header{
     font-size: 56px;
@@ -52,8 +64,6 @@ footer{
 }
 .background-header{
     background:  #2e2f42;
-    width: 1440px;
-    height: 600px;
 }
 .button{
     font-family: "Roboto", sans-serif;
@@ -63,7 +73,6 @@ footer{
     letter-spacing: 0.04em;
     color: #ffffff;
     background-color: #4D5AE5;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     cursor: pointer;
 }
 .button:hover{
@@ -85,11 +94,11 @@ footer{
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
-.features-item-text{
+.feature-item-text{
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #708090;
+    color: #434455;
 }
 .team{
     background-color: #F4F4FD;
