--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ footer{
     letter-spacing: 0.02em;
     color: #434455;
 }
-.footer-text{
+.footer-description{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color:#F4F4FD;
