--- a/css/style.css
+++ b/css/style.css
@@ -160,3 +160,15 @@ footer{
     letter-spacing: 0.02em;
     color:#F4F4FD;
 }
+.footer-logo{
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase ;
+    color:#4d5ae5;
+}
+.accent-footer{
+    color:#f4f4fd;
+}
