--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+* {
+    box-sizing: border-box;
+    }
+    ul{
+        list-style: none;
+        margin-top: 0;
+        margin-bottom: 0;
+        padding-left: 0;
+    }
 a{
     text-decoration:none;
 }
